fix alignment of table cells in meeting, was depending on ember-vo-data-table

--- a/app/styles/project/_c-meeting-chrome.scss
+++ b/app/styles/project/_c-meeting-chrome.scss
@@ -255,6 +255,7 @@
   td {
     max-width: 55ch;
     position: relative;
+    vertical-align: middle;
   }
 
   th.is-selectable,
